@@ -60,9 +60,7 @@
 
 #include "ap_config.h"
 
-#ifdef MAC_OS
-#define PLATFORM "Mac OS"
-#else
+#ifndef PLATFORM
 #define PLATFORM "Unix"
 #endif
 
